@startuml

title __MEDIA's Class Diagram__\n

  package com.formation.start {
    package com.formation.start.media {
      class Author {
          - name : String
          + Author()
          + toString()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class Book {
          - nbpage : int
          + Book()
          + Book()
          + getNetPrice()
          + getNbpage()
          + toString()
          + setNbpage()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class BookRepository {
          ~ reader : BufferedReader
          ~ nLines : int
          ~ nColumns : int
          ~ bookList : ArrayList<Book>
          + load()
          + getAll()
          + getById()
          + getByTitle()
          + getByPrice()
          + getByPublisher()
          + add()
          + remove()
          + update()
          + toString()
          + print()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class CD {
          - nbtrack : int
          + CD()
          + getNbtrack()
          + setNbtrack()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class DVD {
          - zone : int
          + DVD()
          + getNetPrice()
          + getZone()
          + setZone()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      interface IBookRepository {
          {abstract} + load()
          {abstract} + getAll()
          {abstract} + getById()
          {abstract} + getByTitle()
          {abstract} + getByPrice()
          {abstract} + getByPublisher()
          {abstract} + add()
          {abstract} + remove()
          {abstract} + update()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class Media {
          {static} - compteur : int
          - id : int
          - title : String
          - price : double
          - authorList : ArrayList<Author>
          + Media()
          + Media()
          + getPrice()
          + getNetPrice()
          + toString()
          + setId()
          + setTitle()
          + setPrice()
          + setPublisher()
          + setAuthorList()
          {static} + getCompteur()
          + getId()
          + getTitle()
          + getPublisher()
          + getAuthorList()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class Medias {
          {static} + main()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.media {
      class Publisher {
          - name : String
          + Publisher()
          + getName()
          + toString()
      }
    }
  }
  

  Book -up-|> Media
  BookRepository -up-|> IBookRepository
  CD -up-|> Media
  DVD -up-|> Media
  Media o-- Publisher : publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
